--- a/sabyltimetracker/templates/tracker/past_days.html
+++ b/sabyltimetracker/templates/tracker/past_days.html
@@ -87,7 +87,8 @@
               </div>
             {% endif %}
             <div class="col-sm-6 col-12">
-                <button id="report" class="btn btn-lg btn-block btn-primary" disabled type="submit">{% trans "Download Report" %}</button>
+<!--                <button id="report" class="btn btn-lg btn-block btn-primary" disabled type="submit">{% trans "Download Report" %}</button>-->
+              <button id="report" class="btn btn-lg btn-block btn-primary" type="submit">{% trans "Download Report" %}</button>
             </div>
         </div>
       </div>
@@ -132,7 +133,6 @@
       showMonthAfterYear: false,
       yearSuffix: ""
     });
-
 
 
     $("#selectDay").change(function(){
