--- a/sabyltimetracker/templates/tracker/log_hours.html
+++ b/sabyltimetracker/templates/tracker/log_hours.html
@@ -335,35 +335,64 @@
       <div class="col-xs-6 col-lg-12">
         <div class="card">
           <div class="card-header">
-            <strong>UTE</strong>
+            <strong>ENERGÍA ELÉCTRICA (Consumo en Kw/h)</strong>
           </div>
           <div class="card-body card-block">
             <div class="form-group row">
-              <label for="entrada-activa" class="col-md-2 col-form-label">Entrada activa:</label>
+              <label for="entrada-activa" class="col-md-2 col-form-label">Inicio activa:</label>
               <div class="col-md-3">
                 <input id="entrada-activa" name="entrada-activa" value="{{ entrada_activa }}" class="form-control">
               </div>
               <div class="col-md-1">
               </div>
-              <label for="entrada-reactiva" class="col-md-2 col-form-label">Entrada reactiva:</label>
+              <label for="salida-activa" class="col-md-2 col-form-label">Fin activa:</label>
               <div class="col-md-3">
-                <input id="entrada-reactiva" name="entrada-reactiva" value="{{ entrada_reactiva }}" class="form-control">
+                <input id="salida-activa" name="salida-activa" value="{{ salida_activa }}" class="form-control">
               </div>
             </div>
 
             <div class="form-group row">
-              <label for="salida-activa" class="col-md-2 col-form-label">Salida activa:</label>
+              <label for="entrada-reactiva" class="col-md-2 col-form-label">Inicio reactiva:</label>
               <div class="col-md-3">
-                <input id="salida-activa" name="salida-activa" value="{{ salida_activa }}" class="form-control">
+                <input id="entrada-reactiva" name="entrada-reactiva" value="{{ entrada_reactiva }}" class="form-control">
               </div>
               <div class="col-md-1">
               </div>
-              <label for="salida-reactiva" class="col-md-2 col-form-label">Salida reactiva:</label>
+              <label for="salida-reactiva" class="col-md-2 col-form-label">Fin reactiva:</label>
               <div class="col-md-3">
                 <input id="salida-reactiva" name="salida-reactiva" value="{{ salida_reactiva }}" class="form-control">
               </div>
             </div>
           </div>
+
+          <div id="div-mensaje-error-entrada-activa-mayor-que-fin" class="alert alert-danger mx-2 my-2" role="alert" style="display:none;">
+            <span id="mensaje-error-entrada-activa-mayor-que-fin">Error. Entrada activa no puede ser mayor que salida activa.</span>
+            <button id="cerrar-mensaje-error-entrada-activa-mayor-que-fin" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
+          <div id="div-mensaje-error-entrada-activa-menor" class="alert alert-danger mx-2 my-2" role="alert" style="display:none;">
+            <span id="mensaje-error-entrada-activa-menor">Error: 'Inicio activa' no puede ser menor que 'Fin activa' del día de trabajo anterior. 'Fin activa' del día anterior: {{ wda_salida_activa }} Kw/h</span>
+            <button id="cerrar-mensaje-error-entrada-activa-menor" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
+          <div id="div-mensaje-error-entrada-reactiva-mayor-que-fin" class="alert alert-danger mx-2 my-2" role="alert" style="display:none;">
+            <span id="mensaje-error-entrada-reactiva-mayor-que-fin">Error. Entrada reactiva no puede ser mayor que salida reactiva.</span>
+            <button id="cerrar-mensaje-error-entrada-reactiva-mayor-que-fin" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
+          <div id="div-mensaje-error-entrada-reactiva-menor" class="alert alert-danger mx-2 my-2" role="alert" style="display:none;">
+            <span id="mensaje-error-entrada-reactiva-menor">Error: 'Inicio reactiva' no puede ser menor que 'Fin reactiva' del día de trabajo anterior. 'Fin reactiva' del día anterior: {{ wda_salida_reactiva }} Kw/h</span>
+            <button id="cerrar-mensaje-error-entrada-reactiva-menor" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
         </div>
       </div>
     </div>
@@ -371,19 +400,55 @@
       <div class="col-xs-6 col-lg-12">
         <div class="card">
           <div class="card-header">
-            <strong>OSE</strong>
+            <strong>AGUA (Consumo en m<sup>3</sup>)</strong>
           </div>
           <div class="card-body card-block">
             <div class="form-group row">
-              <label for="ose" class="col-md-2 col-form-label">Consumo:</label>
+              <label for="ose-entrada" class="col-md-2 col-form-label">Consumo inicial:</label>
               <div class="col-md-3">
-                <input id="ose" name="ose" value="{{ ose }}" class="form-control">
+                <input id="ose-entrada" name="ose-entrada" value="{{ ose_entrada }}" class="form-control">
+              </div>
+              <div class="col-md-1">
+              </div>
+              <label for="ose-salida" class="col-md-2 col-form-label">Consumo final:</label>
+              <div class="col-md-3">
+                <input id="ose-salida" name="ose-salida" value="{{ ose_salida }}" class="form-control">
               </div>
             </div>
+          </div>
+          <div id="mensaje-error-ose" class="card-body card-block" style="display:none;">
+            <span class="form-group row">
+              Error en datos de OSE
+            </span>
+          </div>
+
+          <div id="div-mensaje-error-ose-mayor-que-fin" class="alert alert-danger mx-2 my-2" role="alert" style="display:none;">
+            <span id="mensaje-error-ose-mayor-que-fin">Error. Consumo inicial no puede ser mayor que consumo final.</span>
+            <button id="cerrar-mensaje-error-ose-mayor-que-fin" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
+          <div id="div-mensaje-error-ose-menor" class="alert alert-danger mx-2 my-2" role="alert" style="display:none;">
+            <span id="mensaje-error-ose-menor">Error: 'Consumo inicial' no puede ser menor que 'Consumo final' del día de trabajo anterior. 'Consumo final' del día anterior: {{ wda_ose_salida }} m<sup>3</sup></span>
+            <button id="cerrar-mensaje-error-ose-menor" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
         </div>
       </div>
     </div>
+
+
+    <div style="display:none;">
+      <input id="wda-entrada-activa" name="wda-entrada-activa" value="{{ wda_entrada_activa }}" class="form-control">
+      <input id="wda-salida-activa" name="wda-salida-activa" value="{{ wda_salida_activa }}" class="form-control">
+      <input id="wda-entrada-reactiva" name="wda-entrada-reactiva" value="{{ wda_entrada_reactiva }}" class="form-control">
+      <input id="wda-salida-reactiva" name="wda-salida-reactiva" value="{{ wda_salida_reactiva }}" class="form-control">
+      <input id="wda-ose-entrada" name="wda-ose-entrada" value="{{ wda_ose_entrada }}" class="form-control">
+      <input id="wda-ose-salida" name="wda-ose-salida" value="{{ wda_ose_salida }}" class="form-control">
+    </div>
+
 
     <div class="row">
       <div class="col-xs-6 col-lg-12">
@@ -394,6 +459,8 @@
         </div>
       </div>
     </div>
+
+
   {% endif %}
 {% endblock content%}
 
@@ -415,4 +482,32 @@
   <script src="{% static 'js/data-table/buttons.print.min.js' %}"></script>
   <script src="{% static 'js/data-table/buttons.colVis.min.js' %}"></script>
   <script src="{% static 'js/data-table/datatables-init.js' %}"></script>
+
+  <script>
+    $('#cerrar-mensaje-error-entrada-activa-menor').click(function(){
+      $('#div-mensaje-error-entrada-activa-menor').hide();
+    });
+
+    $('#cerrar-mensaje-error-entrada-activa-mayor-que-fin').click(function(){
+      $('#div-mensaje-error-entrada-activa-mayor-que-fin').hide();
+    });
+
+    $('#cerrar-mensaje-error-entrada-reactiva-menor').click(function(){
+      $('#div-mensaje-error-entrada-reactiva-menor').hide();
+    });
+
+    $('#cerrar-mensaje-error-entrada-reactiva-mayor-que-fin').click(function(){
+      $('#div-mensaje-error-entrada-reactiva-mayor-que-fin').hide();
+    });
+
+    $('#cerrar-mensaje-error-ose-menor').click(function(){
+      $('#div-mensaje-error-ose-menor').hide();
+    });
+
+    $('#cerrar-mensaje-error-ose-mayor-que-fin').click(function(){
+      $('#div-mensaje-error-ose-mayor-que-fin').hide();
+    });
+
+
+  </script>
 {% endblock javascript %}
