--- a/sabyltimetracker/templates/tracker/dht_balancin_report.html
+++ b/sabyltimetracker/templates/tracker/dht_balancin_report.html
@@ -14,7 +14,7 @@
     <div class="col-sm-4">
       <div class="page-header float-left">
         <div class="page-title">
-          <h1>DHT Balancin</h1>
+          <h1>DHT Balancín</h1>
         </div>
       </div>
     </div>
