--- a/sabyltimetracker/templates/tracker/day_review.html
+++ b/sabyltimetracker/templates/tracker/day_review.html
@@ -150,7 +150,7 @@
                           <span>Para finalizar un día sin que todos los trabajadores tengan todos los registros necesarios o sin ingresar consumo de UTE y OSE, se requiere un comentario escrito.</span>
                         </p>
                         <form method="post" action="{% url 'tracker:api_end_day' request.user.username %}">{% csrf_token %}
-                          <textarea name="comment" required rows="6" placeholder="{% trans 'Comment (required)' %}" class="form-control">{{ c127omentario }}</textarea>
+                          <textarea name="comment" required rows="6" placeholder="{% trans 'Comment (required)' %}" class="form-control">{{ comentario }}</textarea>
                           <br>
                           <button type="submit" class="btn btn-lg btn-block btn-outline-success">{% trans "Confirm and End Day" %}</button>
                         </form>
